created index_dev.html for testing video text funcionality

--- a/snstranscripts.html
+++ b/snstranscripts.html
@@ -176,20 +176,18 @@
     </div>
   </div>
 
-
-
   <!-- create main div for button row -->
   <div id="main-div" class="sticky-top m-2">
     <div class="container sticky-top main-div bg-white">
       <div class="row justify-content-md-center">
-        <button class="top-btns btn btn-sm btn-outline-dark rounded-pill col-2" onclick='window.location.reload();'><i
+        <button class="btn btn-sm btn-outline-dark rounded-pill col-2" onclick='window.location.reload();'><i
             class='bi bi-arrow-repeat'></i></button>
-        <button id="openAllBtn" class="top-btns btn btn-sm btn-outline-success rounded-pill col-4 ">Apri tutti</button>
-        <button id="closeAllBtn" class="top-btns btn btn-sm btn-outline-success rounded-pill  col-4">Chiudi
+        <button id="openAllBtn" class="btn btn-sm btn-outline-success rounded-pill col-4 ">Apri tutti</button>
+        <button id="closeAllBtn" class="btn btn-sm btn-outline-success rounded-pill  col-4">Chiudi
           tutti</button>
-        <button class="top-btns btn btn-sm btn-outline-dark rounded-pill col-1" onclick='window.scrollTo(0, 0)'><i
+        <button class="btn btn-sm btn-outline-dark rounded-pill col-1" onclick='window.scrollTo(0, 0)'><i
             class='bi bi-arrow-up'></i></button>
-        <button class="top-btns btn btn-sm btn-outline-dark rounded-pill col-1"
+        <button class="btn btn-sm btn-outline-dark rounded-pill col-1"
           onclick='window.scrollTo(0, document.body.scrollHeight)'><i class='bi bi-arrow-down '></i></button>
       </div>
       <div class="input-group mt-2">
