minor changes to style of modal close buttons

--- a/snstranscripts.html
+++ b/snstranscripts.html
@@ -57,7 +57,7 @@
       <div class="modal-content">
         <div id="success-modal-header" class="modal-header bg-success bg-gradient border border-success text-light">
           <h5 class="modal-title">Trascrizione salvata con successo!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+          <button type="button" class="btn-close bg-light text-light" data-bs-dismiss="modal" aria-label="Chiudi"></button>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
       <div class="modal-content">
         <div class="modal-header bg-warning text-light">
           <h5 class="modal-title">Attenzione!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+          <button type="button" class="btn-close bg-light text-light" data-bs-dismiss="modal" aria-label="Chiudi"></button>
         </div>
         <div class="modal-body">
           <p id="search-warning-message">Nessun video trovato con i criteri dati."</p>
@@ -88,7 +88,7 @@
       <div class="modal-content">
         <div class="modal-header bg-warning text-light">
           <h5 class="modal-title">Attenzione!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+          <button type="button" class="btn-close bg-light text-light" data-bs-dismiss="modal" aria-label="Chiudi"></button>
         </div>
         <div class="modal-body">
           <p id="warning-message">Alcuni testi sono in fase di modifica.<br>Le modifiche non salvate verranno perse.<br><br>Continuare?</p>
@@ -109,7 +109,7 @@
       <div class="modal-content">
         <div class="modal-header bg-danger text-light">
           <h5 class="modal-title">ERRORE!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+          <button type="button" class="btn-close bg-light text-light"  data-bs-dismiss="modal" aria-label="Chiudi"></button>
         </div>
         <div class="modal-body">
           <p id="error-message"></p>
