addes message when link is copied

--- a/index_dev.html
+++ b/index_dev.html
@@ -325,6 +325,12 @@
       navigator.clipboard.writeText(linkToOpen);
       window.open(linkToOpen,'_blank')
     }
+
+    function openPage(urlToCopy)
+    {
+      navigator.clipboard.writeText(urlToCopy);
+      alert("Link copiato");
+    }
 </script>
 
 
