minor bug (function name typo) fixed

--- a/index_dev.html
+++ b/index_dev.html
@@ -326,7 +326,7 @@
       window.open(linkToOpen,'_blank')
     }
 
-    function openPage(urlToCopy)
+    function copyToClip(urlToCopy)
     {
       navigator.clipboard.writeText(urlToCopy);
       alert("Link copiato");
